; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/i2c/busses/extr_i2c-pmcmsp.c_pmcmsptwi_reg_to_clock.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/i2c/busses/extr_i2c-pmcmsp.c_pmcmsptwi_reg_to_clock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pmcmsptwi_clock = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, %struct.pmcmsptwi_clock*)* @pmcmsptwi_reg_to_clock to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pmcmsptwi_reg_to_clock(i32 %0, %struct.pmcmsptwi_clock* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.pmcmsptwi_clock*, align 8
  store i32 %0, i32* %3, align 4
  store %struct.pmcmsptwi_clock* %1, %struct.pmcmsptwi_clock** %4, align 8
  %5 = load i32, i32* %3, align 4
  %6 = ashr i32 %5, 12
  %7 = and i32 %6, 15
  %8 = load %struct.pmcmsptwi_clock*, %struct.pmcmsptwi_clock** %4, align 8
  %9 = getelementptr inbounds %struct.pmcmsptwi_clock, %struct.pmcmsptwi_clock* %8, i32 0, i32 0
  store i32 %7, i32* %9, align 4
  %10 = load i32, i32* %3, align 4
  %11 = and i32 %10, 1023
  %12 = load %struct.pmcmsptwi_clock*, %struct.pmcmsptwi_clock** %4, align 8
  %13 = getelementptr inbounds %struct.pmcmsptwi_clock, %struct.pmcmsptwi_clock* %12, i32 0, i32 1
  store i32 %11, i32* %13, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
